adding java11 in pom files